--- a/styles/index.css
+++ b/styles/index.css
@@ -83,7 +83,7 @@ header {
     justify-content: center;
 }
 .collection{
-    background-image: url("img/fon1.jpg");
+    background-image: url("/img/fon1.jpg");
 
 }
 
@@ -174,6 +174,7 @@ header {
 h3{
     font-family: 'Cormorant', sans-serif;
     font-size: 30px;
+    font-weight:normal;
 }
 .plants{
     background-color: #0B1919;
@@ -460,7 +461,7 @@ p{
     color:#899D9D;
 }
 .help__for__project{
-    background-image: url("img/fon1.jpg");
+    background-image: url("/img/fon1.jpg");
     
 }
 
