--- a/styles/index.css
+++ b/styles/index.css
@@ -1,6 +1,3 @@
-body{
-    margin: 0px;
-}
 header {
     background-color: #1D2F30;
 }
@@ -84,10 +81,13 @@ header {
 }
 .collection{
     background-image: url("/img/fon1.jpg");
-
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
 }
-
-
+.collection__block{
+   padding: 0 32px;
+}
 .sandwich {
     display: none;
 }
@@ -148,26 +148,53 @@ header {
     
 
 .container{
-  
+    display: flex;
     margin: 0 auto;
-    padding: 0 200px;
+    padding: 0 32px;
     background-color: #1D2F30;
 }
 .card__holder{
     display: flex;
-    justify-content:space-between;
+    justify-content:space-between; 
     gap: 0 30px;
     color: #fff;
     max-width: 1118px;
     margin: 0 auto;
     padding: 30px 0;
 }
-.card{
+.card__1{
     color: #fff;
     width: 255px;
     height: 493px;
     padding: 30px 0px 0px 0px;
-    border: 1px solid black;
+    border: 2px solid black;
+    position: relative;
+    text-align:left;
+}
+.card__2{
+    color: #fff;
+    width: 255px; 
+    height: 493px;
+    padding: 30px 0px 0px 0px;
+    border: 2px solid black;
+    position: relative;
+    text-align:left;
+}
+.card__3{
+    color: #fff;
+    width: 255px; 
+    height: 493px;
+    padding: 30px 0px 0px 0px;
+    border: 2px solid black;
+    position: relative;
+    text-align:left;
+}
+.card__4{
+    color: #fff;
+    width: 255px;
+    height: 493px;
+    padding: 30px 0px 0px 0px;
+    border: 2px solid black;
     position: relative;
     text-align:left;
 }
@@ -194,6 +221,10 @@ h3{
 .card__text{
 
     margin-top: 10px;
+}
+.card__text__small{
+    display: none;
+    padding: 0 0;
 }
 .card__title{
     position: relative;
@@ -293,13 +324,12 @@ p{
     font-size: 48px;
     font-style: italic;
     max-width: 1118px;
-    padding: 5px 0px;
+    padding: 49px 0px 0 0;
     font-weight: bold;
     background-color: #1D2F30;
-    padding-top: 49px;
 }
 .second__title__wrapper{
-    
+    padding: 0 32px;
     background-color: #1D2F30;
 }
 .new__artefacts__wrapper__big{
@@ -313,7 +343,7 @@ p{
     display: flex;
     justify-content: space-around;
     margin: 0 auto;
-    padding: 33px 0px;
+    padding: 33px 32px;
     
 }
 .black__block{
@@ -338,7 +368,7 @@ p{
     height: 493px;
     background-color: #BAE249;
     position: relative;
-
+    flex-shrink: 0;
 }
 .plant__1{
     position: absolute;
@@ -462,7 +492,9 @@ p{
 }
 .help__for__project{
     background-image: url("/img/fon1.jpg");
-    
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
 }
 
 .help__title{
@@ -615,42 +647,90 @@ input.filled{
     .text__under__collection{
         display: none;
     }
-}
-@media (max-width:1000px){
-    .new__artefacts__wrapper__small{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-    .black__block{
+    .num__6{
         display: none;
     }
-    .small__black__block{
-        display: flex;
-        align-items: center;
+    .plant__6{
+        display: none;
     }
-    .yellow__block{
-        margin-top: 30px;
-    }
+}
+@media (max-width:1000px){
     .contacts{
         display: none;
     }
     .help__for__project{
         display: none;
     }
+    .plant__7{
+        display: none;
+    }
+    .num__7{
+        display: none;
+    }
+    .plant__5{
+        display: none;
+    }
+    .num__5{
+        display: none;
+    }
 }
 
-@media (max-width:1110px){
+@media (max-width:1180px){
     .card__4{
         display: none;
+        border: none;
+        padding: 0 0;
     }
 }
-@media (max-width:805px){
+@media (max-width:890px){
     .card__3{
         display: none;
+        border: none;
+        padding: 0 0;
+    }
+    .card__2{
+        display: none;
+        border: none;
+        padding: 0 0;
+    }
+    .card{
+        border:none;
+    }
+    .card__holder{
+        display: flex;
+        justify-content: center;
+        gap: 0 0;
+    }
+    .plants{
+        width: 100%;
+    }
+    .card__1{ 
+        width: 100%;
+        height: 450px;
+    }
+    .card__button__container__1{
+        padding-top: 80px;
+    }
+    .container__arrows{
+        display: none;
+    }
+    .dots{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color:#1D2F30;
+        padding-top: 15px;
+    }
+    .card__text{
+        display: none;
+        padding: 0 0;
+    }
+    .card__text__small{
+        display: flex;
+        font-size: 20px;
     }
 }
-@media (max-width:510px){
+@media (max-width:585px){
     header{
         padding: 0;
     }
@@ -676,24 +756,41 @@ input.filled{
     .container__arrows{
         display: none;
     }
-    .card__4{
+    .card__holder{
+        display: flex;
+    }
+    .plants{
+        background-color: #0B1919;
+        width: 100%;
+        height: 200px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-top: -30px;
         
+    }
+    .card__4{
+        border: none;
         display: none;
+        padding: 0 0;
     }
     .card__3{
-        
+        border: none;
         display: none;
+        padding: 0 0;
     }
     .card__2{
+        border: none;
         display: none;
-        
+        padding: 0 0;
     }
     .card__1{
         color: #fff;
         width: 255px;
         height: 493px;
         padding: 30px 0px 0px 0px;
-        border: 1px solid black;
+        border: 2px solid black;
+        margin: 0 auto;
     }
     .card{
         border:none;
@@ -727,6 +824,37 @@ input.filled{
     }
     .container__arrows{
         display: none;
+    }
+    .collection__block{
+        padding: 0 32px;
+        
+    }
+    .nums{
+        position: absolute;
+        left: 16px;
+        top: 16px;
+    }
+    .container{
+        padding: 0 32px;
+        
+    }
+    .black__block{
+        display: none;
+    }
+    .small__black__block{
+        display: flex;
+        align-items: center;
+    }
+    .yellow__block{
+        margin-top: 30px;
+    }
+    .new__artefacts__wrapper__small{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .card__button__container__1{
+        padding-top: 0px;
     }
 }
     
